made app section responsive

--- a/index.html
+++ b/index.html
@@ -156,8 +156,9 @@
         </div>
       </div>
       <!-- row 1 -->
+      <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-3 text-center">
+        <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
             <img
               src="./assets/images/farm-house.jpeg"
@@ -182,7 +183,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 text-center">
+        <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
             <img
               src="./assets/images/development.jpeg"
@@ -207,7 +208,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 text-center">
+        <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
             <img
               src="./assets/images/Disturbance.png"
@@ -236,6 +237,7 @@
           </div>
         </div>
       </div>
+  </div>
 <div class="container">
       <div class="row">
           <div
@@ -252,6 +254,7 @@
         </div>
       </div>
 </div>
+<div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
@@ -279,7 +282,7 @@
           </div>
         </div>
       </div>
-
+</div>
 <!-- row 3 -->
 <div class="container">
       <div class="row justify-content-center">
@@ -295,6 +298,7 @@
             <h5 class="sectionHeader"><i>Responsibilities: Front-End Team, collaborated with Conservation Science Partner's ecologists and private contractors.</i></h5>
           </div>
 </div>
+<div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
@@ -322,7 +326,7 @@
           </div>
         </div>
       </div>
-
+</div>
       <!-- Header 4 -->
 <div class="container">
       <div class="row">
@@ -341,8 +345,9 @@
       </div>
 </div>
       <!-- Row 4 -->
+      <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-3 justify-content-center align-items-center text-center">
+        <div class="col-lg-4 justify-content-center align-items-center text-center">
           <div class="card shadow-lg justify-content-center">
             <img
               src="./assets/images/City_Weather.png"
@@ -375,7 +380,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 text-center">
+        <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
             <img
               src="./assets/images/lion.jpg"
@@ -408,7 +413,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 text-center">
+        <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
             <img
               src="./assets/images/Budget.png"
@@ -443,6 +448,7 @@
         </div>
       </div>
       <div id="skills"></div>
+      </div>
     </section>
     <!-- Skills -->
     <section class="skills" >
