--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       </div>
 </div>
 <!-- row 3 -->
-<div class="container">
+<!-- <div class="container">
       <div class="row justify-content-center">
           <div
             class="col-md-12 d-flex justify-content-center align-items-center"
@@ -326,7 +326,7 @@
           </div>
         </div>
       </div>
-</div>
+</div> -->
       <!-- Header 4 -->
 <div class="container">
       <div class="row">
@@ -612,7 +612,7 @@
             class="col-md-12 d-flex flex-column justify-content-center align-items-center"
           >
             <iframe
-              src="assets/images/Resume_10_2020.pdf"
+              src="assets/images/Resume 12_2021.pdf"
               title="Kristen's Resume"
               height="480px"
               width="800px"
@@ -625,7 +625,7 @@
       <br /><br />
     </section>
     <!-- Footer -->
-    <footer class="footer d-flex justify-content-center">kmvn © 2020</footer>
+    <footer class="footer d-flex justify-content-center">kmvn © 2021</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
