--- a/index.html
+++ b/index.html
@@ -529,13 +529,34 @@
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-            <i class="icon-mongodb" style="font-size: 4rem"></i>
-            <p>MongoDB</p>
+            <i class="icon-azure" style="font-size: 4rem"></i>
+            <p>Azure</p>
           </div>
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
             <p>Express.js</p>
+          </div>
+        </div>
+         <br />
+        <div class="row">
+          <div
+            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
+          >
+          <p>MapboxGL</p>
+          </div>
+          <div
+            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
+          >
+          </div>
+          <div
+            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
+          >
+          </div>
+          <div
+            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
+          >
+          <p>DeckGL</p>
           </div>
         </div>
         <br id="contact" /><br /><br />
