--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
         <div class="col-lg-4 text-center">
           <div class="card shadow-lg justify-content-center">
             <img
-              src="./assets/images/farm-house.jpeg"
+              src="./assets/images/Brazil.jpg"
               class="card-img-top"
-              alt="Image farm house in a field"
+              alt="Sao Paulo River, Brazil"
             />
             <div class="card-header">
               <h5 class="card-title">Project Fluvius</h5>
@@ -275,7 +275,7 @@
               </p>
             </div>
             <div class="card-footer">
-              <a href="https://cspbeta.z22.web.core.windows.net/" class="btn btn-sm btn-dark" target="blank"
+              <a href="https://fluviuswebapp.z22.web.core.windows.net" class="btn btn-sm btn-dark" target="blank"
                 >Explore the App</a
               >
             </div>
@@ -435,7 +435,7 @@
                 href="https://no-excuses-the-budget-app.herokuapp.com/"
                 class="btn btn-dark"
                 target="blank"
-                >The Budget App</a
+                >Explore the App</a
               >
               <a
                 href="https://github.com/kmvanneste/No-Excuses-The-Budget-App"
