fixing text in About Me

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <link rel="stylesheet" href="assets/font-mfizz.css" />
     <link rel="stylesheet" href="assets/style.css" />
-    <title>kmvn</title>
+    <title>Kristen M. Van Neste's Portfolio</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -103,24 +103,23 @@
             class="col-lg-8 d-flex flex-column justify-content-center align-items-left description"
           >
             <p class="description">
-              My name is Kristen Michelle Van Neste and I am a software
-              engineer.
-            </p>
-            <p class="description">
-              Prior to starting my career as a web developer, I had the
-              incredible experience of working as an Associate Certified Wildlife Biologist. I
-              studied a wide range of wildlife, from bats in South Carolina to
-              mountain lions in Los Angeles. My experiences as a biologist
-              introduced me to technologies such as GIS, database management,
-              and software development. After five years of field work I
-              realized I was on the wrong career path - I turned down a funded
-              Master's position at the University of Wisconsin and started
-              studying web development. Now, I work as the lead Front-End Developer at the non-profit Conservation Science Partners (CSP). 
+              My name is Kristen Michelle Van Neste and I am currently the lead Front-End Developer at the non-profit Conservation Science Partners (CSP).
             </p>
               
             <p class="description">
               At CSP, I specialize in building web map applications using JavaScript, React, MapboxGL JS, and Deck.GL. Within my first year I published three web applications for Microsoft promoting the release of the Planetary Computer, and am in the process of completing web apps for American Farmland Trust, Bureau of Land Management, and the North Central Climate Adaptation Science Center. Working closely with data scientists and engineers has exposed me to tools and languages such as Python, Google App Engine, Azure, Docker, Tippecanoe, and Google Analytics.
               </p>
+
+            <p class="description">
+              Prior to starting my career as a web developer, I had the
+              incredible experience of working as an Associate Certified Wildlife Biologist. I
+              studied a wide range of wildlife, from bats in South Carolina to
+              mountain lions in Los Angeles. As a biologist, I was introduced to technologies such as GIS, database management,
+              and software development. After five years of field work, I
+              realized I was on the wrong career path - I turned down a funded
+              Master's position at the University of Wisconsin and started
+              studying web development. During the COVID-19 pandemic lockdown I started teaching myself JavaScript. In Dec 2020 CSP hired me as their Lead Front-End Developer. 
+            </p>
 
             <p class="description">
               As a proactive learner, I am always open to new opportunities to further develop my career.  
@@ -151,7 +150,7 @@
           <div
             class="col-md-12 d-flex justify-content-center align-items-center"
           >
-            <h5 class="sectionHeader"><i>Responsibilities: Lead Front-End Developer, Lead UI/UX Designer, collaborated with Microsoft engineers and Conservation Science Partner's data scientists for map data.</i></h5>
+            <h5 class="sectionSubHeader"><i>Responsibilities: Lead Front-End Developer, Lead UI/UX Designer, collaborated with Microsoft engineers and Conservation Science Partner's data scientists for map data.</i></h5>
           </div>
         </div>
       </div>
@@ -249,7 +248,7 @@
         <div
             class="col-md-12 d-flex justify-content-center align-items-center"
           >
-            <h5 class="sectionHeader"><i>Responsibilities: Lead Front-End Developer, Lead UI/UX Designer, collaborated with Microsoft Brazil engineers and Conservation Science Partner's data scientists for map data and app design.</i></h5>
+            <h5 class="sectionSubHeader"><i>Responsibilities: Lead Front-End Developer, Lead UI/UX Designer, collaborated with Microsoft Brazil engineers and Conservation Science Partner's data scientists for map data and app design.</i></h5>
           </div>
         </div>
       </div>
@@ -339,7 +338,7 @@
         <div
             class="col-md-12 d-flex justify-content-center align-items-center"
           >
-            <h5 class="sectionHeader"><i>Responsibilities: None - built for practice and fun.</i></h5>
+            <h5 class="sectionSubHeader"><i>Responsibilities: None - built for practice and fun.</i></h5>
           </div>
         </div>
       </div>
