Fixed spacing on title banner

--- a/index.html
+++ b/index.html
@@ -62,31 +62,25 @@
       </div>
     </nav>
     <!--Name Banner-->
-    <section class="row no-gutters">
-      <div class="col-sm-6 no-gutters">
-        <div
-          class="leftSide d-flex justify-content-center align-items-center"
-        ></div>
+    <section class="row no-gutters nameRow">
+      <div class="col-sm-6 no-gutters leftSide d-flex justify-content-center align-items-center">
+
       </div>
-      <div class="col-sm-6 no-gutters">
-        <div
-          class="rightSide d-flex flex-column justify-content-center align-items-center"
-        >
+      <div class="col-sm-6 no-gutters rightSide d-flex flex-column justify-content-center align-items-center">
+
           <div class="p-2 name">Kristen Michelle Van Neste</div>
           <div class="p-2 title">Front-End Web Developer</div>
-        </div>
       </div>
-       <div id="about" style="margin-top: 800px;"></div>
+       <!-- <div id="about" style="margin-top: 800px;"></div> -->
     </section>
     <!-- About Me -->
-    <section class="aboutMe" >
+    <section id="about" class="aboutMe" >
       <div class="container">
         <div class="row">
-          <!-- <div class="col-md-5"></div> -->
           <div
             class="col-md-12 d-flex justify-content-center align-items-center"
           >
-            <h2 id="aboutMeHeader">About Me</h2>
+            <h2  class="aboutMeHeader">About Me</h2>
           </div>
         </div>
         <div class="row">
