added two more icon logos

--- a/index.html
+++ b/index.html
@@ -511,6 +511,7 @@
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
+          <img style="margin-bottom: 25px; padding: 12px;" src="./assets/icons/icons8-material-ui-96 (1).png" alt="Mapbox Icon" height=75 width=80>
             <p>Material-UI</p>
           </div>
           <div
@@ -528,28 +529,30 @@
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-            <p>Express.js</p>
+          <img style="margin-bottom: 35px;" src="./assets/icons/mapbox-logo-white.png" alt="Mapbox Icon" height=25 width=110>
+          <p style="margin-bottom: -30px;">MapboxGL</p>
           </div>
         </div>
+         <br />
          <br />
         <div class="row">
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-          <p>MapboxGL</p>
           </div>
-          <div
+                    <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
-          </div>
-          <div
-            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
-          >
+            <p>Express.js</p>
           </div>
           <div
             class="col-md-3 d-flex flex-column justify-content-center align-items-center"
           >
           <p>DeckGL</p>
+          </div>
+                    <div
+            class="col-md-3 d-flex flex-column justify-content-center align-items-center"
+          >
           </div>
         </div>
         <br id="contact" /><br /><br />
