edited bio text

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </p>
               
             <p class="description">
-              At CSP, I specialize in building web map applications using JavaScript, React, MapboxGL JS, and Deck.GL. Within my first year I published three web applications for Microsoft promoting the release of the Planetary Computer, and am in the process of completing web apps for American Farmland Trust, Bureau of Land Management, and the North Central Climate Adaptation Science Center. Working closely with data scientists and engineers has exposed me to tools and languages such as Python, Google App Engine, Azure, Docker, Tippecanoe, and Google Analytics.
+              At CSP, I specialize in building web map applications using JavaScript, React, MapboxGL JS, and Deck.GL. Within my first year I published three web applications for Microsoft, promoting the release of the Planetary Computer. I am currently in the process of completing web apps for American Farmland Trust, Bureau of Land Management, and the North Central Climate Adaptation Science Center. Working closely with data scientists and engineers has exposed me to tools and languages such as Python, Google App Engine, Azure, Docker, Tippecanoe, and Google Analytics.
               </p>
 
             <p class="description">
@@ -112,11 +112,11 @@
               and software development. After five years of field work, I
               realized I was on the wrong career path - I turned down a funded
               Master's position at the University of Wisconsin and started
-              studying web development. During the COVID-19 pandemic lockdown I started teaching myself JavaScript. In Dec 2020 CSP hired me as their Lead Front-End Developer. 
+              studying web development. During the COVID-19 pandemic lockdown I seized the opportunity to study JavaScript and completed a Full-Stack Web Development coding boot camp. In Dec 2020 CSP hired me as their Lead Front-End Developer. 
             </p>
 
             <p class="description">
-              As a proactive learner, I am always open to new opportunities to further develop my career.  
+              I am a proactive learner and am always open to new opportunities to further develop my career.  
             </p>
           </div>
         </div>
