--- a/index.html
+++ b/index.html
@@ -99,11 +99,10 @@
   </section>
   <!-- Projects -->
   <!-- Header Container-->
-  <section class="top_section ocean_background">
-    <div class="top_container">
-      
+  <section class="app_section ocean_background">
+    <div class="app_container">
      <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 d-flex align-items-center">
           <h1 class="sectionHeader whiteText">Applications</h1>
         </div>
       </div>
